ares-parser/src/main/java/com/github/ares/parser/antlr4/plsql/PlSqlParser.java
// Generated from PlSqlParser.g4 by ANTLR 4.13.1
package com.github.ares.parser.antlr4.plsql;
import com.github.ares.org.antlr.v4.runtime.atn.*;
import com.github.ares.org.antlr.v4.runtime.dfa.DFA;
import com.github.ares.org.antlr.v4.runtime.*;
import com.github.ares.org.antlr.v4.runtime.misc.*;
import com.github.ares.org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PlSqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEF=1, IF=2, ELSE=3, ELSIF=4, ELSEIF=5, WHILE=6, FOR=7, IN=8, TRY=9, CATCH=10, 
		BREAK=11, CONTINUE=12, RAISE=13, SET=14, START=15, END=16, TRANSACTION=17, 
		COMMIT=18, ROLLBACK=19, SELECT=20, INSERT=21, UPDATE=22, DELETE=23, MERGE=24, 
		TRUNCATE=25, CREATE=26, DROP=27, ALTER=28, WITH=29, AND=30, OR=31, NOT=32, 
		IS=33, NULL_=34, TRUE=35, FALSE=36, BETWEEN=37, LIKE=38, ESCAPE=39, NULL_SAFE_EQUALS=40, 
		NOT_EQUAL_OP=41, LESS_THAN_OP=42, GREATER_THAN_OP=43, EQUALS_OP=44, PLUS_SIGN=45, 
		MINUS_SIGN=46, ASTERISK=47, SOLIDUS=48, PERCENT=49, CONCAT=50, BAR=51, 
		AMPERSAND=52, CARET=53, LEFT_PAREN=54, RIGHT_PAREN=55, LEFT_BRACE=56, 
		RIGHT_BRACE=57, LEFT_BRACKET=58, RIGHT_BRACKET=59, COMMA=60, SEMICOLON=61, 
		PERIOD=62, DOUBLE_PERIOD=63, CHAR_STRING=64, NATIONAL_CHAR_STRING_LIT=65, 
		UNSIGNED_INTEGER=66, APPROXIMATE_NUM_LIT=67, DELIMITED_ID=68, BACKTICK_ID=69, 
		BINDVAR=70, REGULAR_ID=71, SINGLE_LINE_COMMENT=72, MULTI_LINE_COMMENT=73, 
		SPACES=74;
	public static final int
		RULE_sql_script = 0, RULE_statement = 1, RULE_terminated_statement = 2, 
		RULE_body = 3, RULE_def_statement = 4, RULE_assignment_statement = 5, 
		RULE_call_statement = 6, RULE_set_statement = 7, RULE_transaction_statement = 8, 
		RULE_break_statement = 9, RULE_continue_statement = 10, RULE_raise_statement = 11, 
		RULE_if_statement = 12, RULE_elsif_clause = 13, RULE_else_clause = 14, 
		RULE_while_statement = 15, RULE_for_statement = 16, RULE_for_source = 17, 
		RULE_for_query = 18, RULE_for_query_item = 19, RULE_try_statement = 20, 
		RULE_sql_statement = 21, RULE_sql_prefix = 22, RULE_raw_token = 23, RULE_expression = 24, 
		RULE_or_expression = 25, RULE_and_expression = 26, RULE_not_expression = 27, 
		RULE_predicate = 28, RULE_predicate_tail = 29, RULE_relational_operator = 30, 
		RULE_concatenation = 31, RULE_additive = 32, RULE_multiplicative = 33, 
		RULE_unary = 34, RULE_atom = 35, RULE_func_args = 36, RULE_func_arg = 37, 
		RULE_func_top = 38, RULE_func_nested = 39, RULE_literal = 40, RULE_numeric = 41, 
		RULE_identifier = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"sql_script", "statement", "terminated_statement", "body", "def_statement", 
			"assignment_statement", "call_statement", "set_statement", "transaction_statement", 
			"break_statement", "continue_statement", "raise_statement", "if_statement", 
			"elsif_clause", "else_clause", "while_statement", "for_statement", "for_source", 
			"for_query", "for_query_item", "try_statement", "sql_statement", "sql_prefix", 
			"raw_token", "expression", "or_expression", "and_expression", "not_expression", 
			"predicate", "predicate_tail", "relational_operator", "concatenation", 
			"additive", "multiplicative", "unary", "atom", "func_args", "func_arg", 
			"func_top", "func_nested", "literal", "numeric", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DEF'", "'IF'", "'ELSE'", "'ELSIF'", "'ELSEIF'", "'WHILE'", "'FOR'", 
			"'IN'", "'TRY'", "'CATCH'", "'BREAK'", "'CONTINUE'", "'RAISE'", "'SET'", 
			"'START'", "'END'", "'TRANSACTION'", "'COMMIT'", "'ROLLBACK'", "'SELECT'", 
			"'INSERT'", "'UPDATE'", "'DELETE'", "'MERGE'", "'TRUNCATE'", "'CREATE'", 
			"'DROP'", "'ALTER'", "'WITH'", "'AND'", "'OR'", "'NOT'", "'IS'", "'NULL'", 
			"'TRUE'", "'FALSE'", "'BETWEEN'", "'LIKE'", "'ESCAPE'", "'<=>'", null, 
			"'<'", "'>'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'||'", "'|'", 
			"'&'", "'^'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "';'", 
			"'.'", "'..'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEF", "IF", "ELSE", "ELSIF", "ELSEIF", "WHILE", "FOR", "IN", "TRY", 
			"CATCH", "BREAK", "CONTINUE", "RAISE", "SET", "START", "END", "TRANSACTION", 
			"COMMIT", "ROLLBACK", "SELECT", "INSERT", "UPDATE", "DELETE", "MERGE", 
			"TRUNCATE", "CREATE", "DROP", "ALTER", "WITH", "AND", "OR", "NOT", "IS", 
			"NULL_", "TRUE", "FALSE", "BETWEEN", "LIKE", "ESCAPE", "NULL_SAFE_EQUALS", 
			"NOT_EQUAL_OP", "LESS_THAN_OP", "GREATER_THAN_OP", "EQUALS_OP", "PLUS_SIGN", 
			"MINUS_SIGN", "ASTERISK", "SOLIDUS", "PERCENT", "CONCAT", "BAR", "AMPERSAND", 
			"CARET", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACE", "RIGHT_BRACE", "LEFT_BRACKET", 
			"RIGHT_BRACKET", "COMMA", "SEMICOLON", "PERIOD", "DOUBLE_PERIOD", "CHAR_STRING", 
			"NATIONAL_CHAR_STRING_LIT", "UNSIGNED_INTEGER", "APPROXIMATE_NUM_LIT", 
			"DELIMITED_ID", "BACKTICK_ID", "BINDVAR", "REGULAR_ID", "SINGLE_LINE_COMMENT", 
			"MULTI_LINE_COMMENT", "SPACES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlSqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlSqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Sql_scriptContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PlSqlParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Sql_scriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).enterSql_script(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).exitSql_script(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitSql_script(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sql_scriptContext sql_script() throws RecognitionException {
		Sql_scriptContext _localctx = new Sql_scriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sql_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1073609414L) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1L << (_la - 68)) & 11L) != 0)) {
				{
				{
				setState(86);
				statement();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Terminated_statementContext terminated_statement() {
			return getRuleContext(Terminated_statementContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public While_statementContext while_statement() {
			return getRuleContext(While_statementContext.class,0);
		}
		public For_statementContext for_statement() {
			return getRuleContext(For_statementContext.class,0);
		}
		public Try_statementContext try_statement() {
			return getRuleContext(Try_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEF:
			case BREAK:
			case CONTINUE:
			case RAISE:
			case SET:
			case START:
			case END:
			case COMMIT:
			case ROLLBACK:
			case SELECT:
			case INSERT:
			case UPDATE:
			case DELETE:
			case MERGE:
			case TRUNCATE:
			case CREATE:
			case DROP:
			case ALTER:
			case WITH:
			case DELIMITED_ID:
			case BACKTICK_ID:
			case REGULAR_ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				terminated_statement();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				if_statement();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				while_statement();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				for_statement();
				}
				break;
			case TRY:
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				try_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Terminated_statementContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(PlSqlParser.SEMICOLON, 0); }
		public Def_statementContext def_statement() {
			return getRuleContext(Def_statementContext.class,0);
		}
		public Assignment_statementContext assignment_statement() {
			return getRuleContext(Assignment_statementContext.class,0);
		}
		public Call_statementContext call_statement() {
			return getRuleContext(Call_statementContext.class,0);
		}
		public Transaction_statementContext transaction_statement() {
			return getRuleContext(Transaction_statementContext.class,0);
		}
		public Break_statementContext break_statement() {
			return getRuleContext(Break_statementContext.class,0);
		}
		public Continue_statementContext continue_statement() {
			return getRuleContext(Continue_statementContext.class,0);
		}
		public Raise_statementContext raise_statement() {
			return getRuleContext(Raise_statementContext.class,0);
		}
		public Set_statementContext set_statement() {
			return getRuleContext(Set_statementContext.class,0);
		}
		public Sql_statementContext sql_statement() {
			return getRuleContext(Sql_statementContext.class,0);
		}
		public Terminated_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminated_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).enterTerminated_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).exitTerminated_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitTerminated_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Terminated_statementContext terminated_statement() throws RecognitionException {
		Terminated_statementContext _localctx = new Terminated_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_terminated_statement);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEF:
			case BREAK:
			case CONTINUE:
			case RAISE:
			case START:
			case END:
			case COMMIT:
			case ROLLBACK:
			case DELIMITED_ID:
			case BACKTICK_ID:
			case REGULAR_ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(101);
					def_statement();
					}
					break;
				case 2:
					{
					setState(102);
					assignment_statement();
					}
					break;
				case 3:
					{
					setState(103);
					call_statement();
					}
					break;
				case 4:
					{
					setState(104);
					transaction_statement();
					}
					break;
				case 5:
					{
					setState(105);
					break_statement();
					}
					break;
				case 6:
					{
					setState(106);
					continue_statement();
					}
					break;
				case 7:
					{
					setState(107);
					raise_statement();
					}
					break;
				}
				setState(110);
				match(SEMICOLON);
				}
				break;
			case SET:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				set_statement();
				}
				break;
			case SELECT:
			case INSERT:
			case UPDATE:
			case DELETE:
			case MERGE:
			case TRUNCATE:
			case CREATE:
			case DROP:
			case ALTER:
			case WITH:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				sql_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_body);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=com.github.ares.org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(116);
					if (!( _input.LA(1) != END || _input.LA(2) == TRANSACTION )) throw new FailedPredicateException(this, " _input.LA(1) != END || _input.LA(2) == TRANSACTION ");
					setState(117);
					statement();
					}
					} 
				}
				setState(122);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Def_statementContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(PlSqlParser.DEF, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode EQUALS_OP() { return getToken(PlSqlParser.EQUALS_OP, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Def_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).enterDef_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).exitDef_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitDef_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Def_statementContext def_statement() throws RecognitionException {
		Def_statementContext _localctx = new Def_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_def_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(DEF);
			setState(124);
			identifier();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUALS_OP) {
				{
				setState(125);
				match(EQUALS_OP);
				setState(126);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Assignment_statementContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode EQUALS_OP() { return getToken(PlSqlParser.EQUALS_OP, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> PERIOD() { return getTokens(PlSqlParser.PERIOD); }
		public TerminalNode PERIOD(int i) {
			return getToken(PlSqlParser.PERIOD, i);
		}
		public Assignment_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).enterAssignment_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).exitAssignment_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitAssignment_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assignment_statementContext assignment_statement() throws RecognitionException {
		Assignment_statementContext _localctx = new Assignment_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			identifier();
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PERIOD) {
				{
				{
				setState(130);
				match(PERIOD);
				setState(131);
				identifier();
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(137);
			match(EQUALS_OP);
			setState(138);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Call_statementContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode LEFT_PAREN() { return getToken(PlSqlParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(PlSqlParser.RIGHT_PAREN, 0); }
		public List<TerminalNode> PERIOD() { return getTokens(PlSqlParser.PERIOD); }
		public TerminalNode PERIOD(int i) {
			return getToken(PlSqlParser.PERIOD, i);
		}
		public Func_argsContext func_args() {
			return getRuleContext(Func_argsContext.class,0);
		}
		public Call_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_call_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).enterCall_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlSqlParserListener ) ((PlSqlParserListener)listener).exitCall_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitCall_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Call_statementContext call_statement() throws RecognitionException {
		Call_statementContext _localctx = new Call_statementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_call_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			identifier();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PERIOD) {
				{
				{
				setState(141);
				match(PERIOD);
				setState(142);
				identifier();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			match(LEFT_PAREN);
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & -1188950301625810946L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 2047L) != 0)) {
				{
				setState(149);
				func_args();
				}
			}

			setState(152);
			match(RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
